manifest.yaml
# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: MIT-0

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcserver
  namespace: default
spec:
  selector:
    matchLabels:
      app: grpcserver
  replicas: 1
  template:
    metadata:
      labels:
        app: grpcserver
    spec:
      containers:
      - name: grpc-demo
        image: 908642484012.dkr.ecr.us-east-1.amazonaws.com/grpc_registry:grpc-app
        imagePullPolicy: Always
        ports:
        - name: grpc-api
          containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: grpcserver
  namespace: default
spec:
  # bypass kube-proxy
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  selector:
    app: grpcserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
   # alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/backend-protocol-version: "GRPC"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/certificate-arn: ${ACM_ARN}
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
  labels:
    app: grpcserver
    environment: dev
  name: grpcserver
  namespace: default
spec:
  ingressClassName: alb
  rules:
    - host: grcp.app.test.python.com
      http:
        paths:
          - backend:
              service:
                name: grpcserver
                port:
                  number: 80
            path: /
            pathType: Prefix
